Update from java17 to java21