@@ -11,6 +11,8 @@ import io.inoa.rest.ConfigurationVO;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.exceptions.HttpStatusException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Comparator;
 import java.util.List;
@@ -172,14 +174,14 @@ public interface ConfigurationMapper {
 
       case URL:
         {
-          if (!(object instanceof String)) {
+          if (!(object instanceof String value)) {
             throw new HttpStatusException(
                 HttpStatus.BAD_REQUEST,
                 "String expected, got: " + object.getClass().getSimpleName());
           }
           try {
-            return new URL((String) object).toString();
-          } catch (MalformedURLException e) {
+            return new URI(value).toURL().toString();
+          } catch (IllegalArgumentException | MalformedURLException | URISyntaxException e) {
             throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Invalid url: " + e.getMessage());
           }
         }
